objects/SGCOM3__SalesgenieFieldMapping__c.object
<CustomObject>
    <fields>
        <fullName>SGCOM3__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SGCOM3__IsStandardField__c</fullName>
        <formula>if( SGCOM3__SalesgenieField__r.SGCOM3__IsStandardField__c ,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGCOM3__SalesgenieField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesgenieField</label>
        <referenceTo>SGCOM3__SalesgenieField__c</referenceTo>
        <relationshipLabel>SalesgenieFieldMappings (SalesgenieField)</relationshipLabel>
        <relationshipName>SalesgenieFieldMappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SGCOM3__Salesgenie_Database_Name__c</fullName>
        <formula>SGCOM3__SalesgenieField__r.SGCOM3__Database_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesgenie Database Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGCOM3__Salesgenie_Field_Name__c</fullName>
        <formula>SGCOM3__SalesgenieField__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesgenie Field Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGCOM3__Target_Field_Label__c</fullName>
        <label>Target Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGCOM3__Target_Field_Type__c</fullName>
        <label>Target Field Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGCOM3__Target_Field__c</fullName>
        <label>Target Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGCOM3__Target_Object__c</fullName>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                    <label>Lead</label>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGCOM3__Value__c</fullName>
        <formula>SGCOM3__SalesgenieField__r.SGCOM3__Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <label>SalesgenieFieldMapping</label>
    <listViews>
        <fullName>SGCOM3__All</fullName>
        <columns>SGCOM3__Salesgenie_Field_Name__c</columns>
        <columns>SGCOM3__Salesgenie_Database_Name__c</columns>
        <columns>SGCOM3__IsStandardField__c</columns>
        <columns>SGCOM3__Value__c</columns>
        <columns>SGCOM3__Target_Object__c</columns>
        <columns>SGCOM3__Target_Field_Label__c</columns>
        <columns>SGCOM3__Target_Field__c</columns>
        <columns>SGCOM3__Target_Field_Type__c</columns>
        <columns>SGCOM3__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SGCOM3__Mappings_Active</fullName>
        <columns>SGCOM3__Salesgenie_Field_Name__c</columns>
        <columns>SGCOM3__Salesgenie_Database_Name__c</columns>
        <columns>SGCOM3__IsStandardField__c</columns>
        <columns>SGCOM3__Value__c</columns>
        <columns>SGCOM3__Target_Object__c</columns>
        <columns>SGCOM3__Target_Field_Label__c</columns>
        <columns>SGCOM3__Target_Field__c</columns>
        <columns>SGCOM3__Target_Field_Type__c</columns>
        <columns>SGCOM3__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SGCOM3__IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mappings Active</label>
    </listViews>
    <listViews>
        <fullName>SGCOM3__Mappings_Default</fullName>
        <columns>SGCOM3__Salesgenie_Field_Name__c</columns>
        <columns>SGCOM3__Salesgenie_Database_Name__c</columns>
        <columns>SGCOM3__IsStandardField__c</columns>
        <columns>SGCOM3__Value__c</columns>
        <columns>SGCOM3__Target_Object__c</columns>
        <columns>SGCOM3__Target_Field_Label__c</columns>
        <columns>SGCOM3__Target_Field__c</columns>
        <columns>SGCOM3__Target_Field_Type__c</columns>
        <columns>SGCOM3__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SGCOM3__IsStandardField__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Mappings Default</label>
    </listViews>
    <listViews>
        <fullName>SGCOM3__Mappings_Inactive</fullName>
        <columns>SGCOM3__Salesgenie_Field_Name__c</columns>
        <columns>SGCOM3__Salesgenie_Database_Name__c</columns>
        <columns>SGCOM3__IsStandardField__c</columns>
        <columns>SGCOM3__Value__c</columns>
        <columns>SGCOM3__Target_Object__c</columns>
        <columns>SGCOM3__Target_Field_Label__c</columns>
        <columns>SGCOM3__Target_Field__c</columns>
        <columns>SGCOM3__Target_Field_Type__c</columns>
        <columns>SGCOM3__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SGCOM3__IsActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Mappings Inactive</label>
    </listViews>
    <nameField>
        <label>SalesgenieFieldMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesgenieFieldMappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>